Added the options support

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   </div>
 </div>
 <script>
-  $( document ).ready( $('#slider').jqSlide() )
+  $( document ).ready( $('#slider').jqSlide({'defaultSlide': 2}) )
 </script>
 </body>
 </html>
