updated dynamic assets link

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <title>JQSlider</title>
   <script src="https://code.jquery.com/jquery-2.1.4.min.js" type="text/javascript"> </script>
-  <script src="/js/jqSlide.js" type="text/javascript"> </script>
-  <link href="/css/jqSlide.css" rel="stylesheet"  type='text/css'>
+  <script src="js/jqSlide.js" type="text/javascript"> </script>
+  <link href="css/jqSlide.css" rel="stylesheet"  type='text/css'>
 </head>
 <body>
 <div class="main-wrapper">
